force-app/main/default/objects/Course_Master__c.object
<CustomObject>
    <description>custom object to group all Courses with the same course code</description>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>A unique (case insensitive) string to group all Courses by Code</description>
        <label>Course Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GradRes_Application_Requirement__c</fullName>
        <description>used in myApp graduate research to identify steps to show and hide</description>
        <label>GradRes Application Requirement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Creative Works</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Theatre Performance</fullName>
                </value>
                <value>
                    <fullName>Publications</fullName>
                </value>
                <value>
                    <fullName>Exhibitions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Active_Course_Version_Description__c</fullName>
        <formula>Latest_Active_Course_Version__r.Course_Description__c</formula>
        <label>Latest Active Course Version Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Active_Course_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the latest Course version with the same code that is currently active</description>
        <label>Latest Active Course Version</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Masters (Latest Active Course Version)</relationshipLabel>
        <relationshipName>Course_Masters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Course_Version_Description__c</fullName>
        <description>Course description of current latest Course version</description>
        <formula>Latest_Course_Version__r.Course_Description__c</formula>
        <label>Latest Course Version Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Course_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to the child Course with the latest version</description>
        <label>Latest Course Version</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Masters</relationshipLabel>
        <relationshipName>Course_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>